[package]
name = "rain-disaster-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json5 = "*"
serde_json = "*"
serde = { version = "1.0.136", features = ["derive"] }
rayon = "*"
rand = "*"
rust-bert = "*"
anyhow = "*"
uwuify = "*"
lazy_static = "*"
indicatif = "*"
